fix list overflow hidden problem

--- a/dev/less/4-modules/_textOverflow.less
+++ b/dev/less/4-modules/_textOverflow.less
@@ -6,7 +6,7 @@
 .single-pageHead__title,
 .fpostArticle__title,
 .single-article__content p > *,
-.single-article__content li,
+.single-article__content li > *,
 .single-article__content a {
 	overflow: hidden;
 	max-width: 100%;
